--- a/Report/Eda2.Rmd
+++ b/Report/Eda2.Rmd
@@ -340,16 +340,16 @@ setkey(totaldt, region, order)
 
 options(scipen=999) #turn off scientific notation
 
-e1 <- ggplot(data = totaldt, 
+ggplot(data = totaldt, 
        aes(x = long, y = lat, group = group, fill = percent_democrat_2016)) +
   geom_polygon() + coord_map() +
   scale_fill_gradientn("", colours=brewer.pal(9, "RdYlBu")) + ggtitle("USA election  2016 \n (percent of democrat vote)") 
 
-e2 <- ggplot(data = totaldt, 
+ggplot(data = totaldt, 
        aes(x = long, y = lat, group = group, fill = percent_democrat_2020)) +
   geom_polygon() + coord_map() +
   scale_fill_gradientn("", colours=brewer.pal(9, "RdYlBu")) + ggtitle("USA election  2020 \n (percent of democrat vote)") 
-grid.arrange(e1, e2, ncol=2)
+#grid.arrange(e1, e2, ncol=2)
 
 
 ```
