--- a/Report/Conclusion.Rmd
+++ b/Report/Conclusion.Rmd
@@ -9,35 +9,42 @@ Our objective was to answer the questions :
 
 - Is there a real disparity between black and white people getting shot every year ?
 
-- Can we explain the disparity between black and white killed with the democratic percentage within a state?
-
-- Is race an important factor in the rate of police killings ?
-
 - Is the rate of crime positively correlated with the police killings regarding a certain race ? 
 ie : If black people are more responsible of crime rate, does it mean they are killed more ?
 
+- Can we explain the disparity between Black and White people killed with the democratic percentage within a state?
 
-Here is what we found out : 
+- Is race an important factor in the rate of police killings ?
 
-The United States represents 2 main population : White at 76% and Black at 13%.
-Since 2013, an average number of 1096 people are killed each year. White people represent 44% of these killings and 25% are Black people, meaning that Black people were killed 3 times more than White people. Most of these people killed were male (95%). This first analysis answered our first question : yes, there is a disparity among Black and White people killed in the United States. 
 
-- So how could we explain this disparity in Black and White killings ? 
 
-United states is a country that has 2 main party : Democratic that claim to be liberal and progressive, and Republican, conservative and traditionnal. Since a long time most president have been democratic. Our hypotethis was that the states where there were more republican vote, there would be higher rate of black killings. After analyzing our variables with the help of graphic vizualisations we couldn't find a clear answer. For instance in Rhode Island since 2016 more than 50% of the votes were democrats. However 50% of people killed by the police were Black while representing only 5,6% of the population. (A COMPLETER PAR JEREMY) Our modelling part revealed that there was no real correlation between the political party of a state and the black killings (A COMPLETER PAR JEREMY).
-While some states fitted the hypothesis, others didn't, making the political party a minor factor of disparity in Black and White killings. 
+Here is what we found out :
 
-To put our table to good use, we analyzed the circumstances of death for black and white people. Our results were interesting and didn't match our beliefs : Black people are less likely to be armed but more likely to flee. However more white people are killed when showing an illness or being drugged. The most disturbing part was the fact that the percentage of officers charged of a crime for black people was higher than for white people. (Actually this result is not significant because it could be that either the black killings were less legitimate and that's why officers are more charged). Finally we observed that there are 168 people since 2013 who have been killed for no reason. 
+The United States represent 2 main populations : White at approximately 61% and Black at 13%. Since 2013, an average number of 1096 people are killed each year by the police. White people represent 44% of these killings and Black people 25%. More importantly, between 2013 and 2020, 0.006% of Black population were killed by the police against 0.002% of  the White population. This means that Black people were killed 3 times more than White people. Most of these people were male (95%). This first analysis answered our first question: yes, there is a disparity among Black and White people killed in the United States.
 
-- Another question we had was, if the political party didn't explain the disparity than, did crime rate ?
+1 ) So how could we explain this disparity in Black and White killings? 
 
-In our analysis we observed that men were responsible of more than 80% of crime, while women represented approximately 16%. However, 95% of killed people were men, meaning there is even a disparity between gender. This could be explained by factors such as : the fact that women were in general less tempted to flee or to be armed, but also the fact that, and without research, in our society male are more prone to violence. Moreover, it is "inculqué" in every children that "a boy shouldn't hit a woman", making the man the "strong" one and the woman the one to defend. In consequence, it means that no matter the circumstance, for a lot of people it would be harder to shoot or kill a woman. 
+First of all, regarding violent crime, we found out that there was approximately the same amount of White and Black offenders (44% in 2020). This information meant that the disparity in killings could come from the fact that comparing to their population, there is a bigger proportion of Black people responsible of violent crimes. As Black people have a crime rate higher than White people (comparing to their population rate), obviously, their killing rate would be also higher.
 
-Regarding crime, we found out that there were approximately the same amount of White and Black offenders (44% in 2020). This information meant that the disparity in killings could come from the fact that comparing to their population, there is a bigger proportion of Black people responsible of violent crimes. At first we compared two states to look for a vizual significance but it went totally the other way we thought. In fact the correlation revealed that (A compléter avec les résultats du moedellig). So at this point neither our hypothesis on political party, neither the one on crime were true. 
+However, the percentage of White killed each year by the police (44%) is roughly equal to the percentage they represent for the violent crime. On the opposite, the percentage of Black people killed by the police (25%) is clearly lower than to the percentage they represent for the violent crime. Despite being more likely to do violent crime, Black people seem to be less killed based on the percentage of violent crime they are perpetrating. 
+Nevertheless, Black and White are not equal concerning the circumstances when the police kill them.  The most important disparity is that Black have 30% more chance to get killed if they are unarmed compared to White people. In addition, they have 20% more chance to get shot if they are fleeing the crime scene while white people have twice more chance to get killed if they are drunk, under drugs, or have mental illness. There is 2 reasons to explain this: either Black people are more violent or there is a racial bias in the police in the United States. Anyway, Black people getting shot seems to be interpreted as more threatening than White people. To counter this effect, a course could be delivered to police station to realize there is a bias and try to eliminate it.
 
-Our final thought is that these killings depend a lot on personal beliefs, behaviors, and variables that cant be measured or explained. 
+Furthermore, the most disturbing part was the fact that the percentage of officers charged of a crime for Black people was higher than for White people. We think there is more pressure from media or Black movement on the judge to charge an officer in the case the victim is Black. However, it could also be that Black killings are usually less legitimate than White killings, which would make more sense since our data go from 2013.
+Finally, we observed that there are 168 people since 2013 who have been killed for no reason (unarmed, not fleeing, not under drugs or alcohol, no mental illness, etc…)
 
-In our first table we were able to compare the circumstances of killings (ou placer ca ?) We observed that 10% of the killings were not explained by the victim presenting a reason to be shot. 
+In our analysis we observed that men were responsible of more than 80% of crime, while women represented approximately 16%. However, 95% of killed people were men, meaning there is even a disparity between gender. This could be explained by factors such as : the fact that women were in general less tempted to flee or to be armed, but also the fact that, and without research, in our society male are more prone to violence. Moreover, it is taught to every children that “a man shouldn’t hit a woman”, making the man the “strong” one and the woman the one to defend. In consequence, no matter the circumstance, for a lot of people it would be harder to shoot or kill a woman.
 
-- To conclude, even thought our project didn't go the way we wanted, we can still confirm that if you’re a Black male in the united states you are in more likely to get killed than a White person male or female. ( A COMPLETER AVEC MODELLING)
+In conclusion, there is indeed a disparity between Black and White people, but it is not that simple. Black people are more killed than White people for sure, but they also do more violent crime. We observed that some bias exists for groups concerning the conditions they got shoot by the police. Maybe other variables could explain this difference between Black and White killings.
+
+2) Are republican states more likely to kill Black offenders? Can we explain the disparity between black and white killings with the democratic percentage within a state?
+United States is a country that has 2 main party: Democratic that claim to be liberal and progressive, and Republican, conservative and traditionnal. Since a long time most president have been democratic. Our hypotethis was that the states where there were more republican vote, there would be higher rate of black killings. After analyzing our variables with the help of graphic vizualisations we couldn’t find a clear answer. 
+First of all, our first model proved that police in republican state are more willing to shoot offenders. In order to reduce the number of people killed each year, we need to understand the difference between these 2 systems. Actually, according to official researches, 73% of democrats think that the access to guns is a very big problem against 18% for republicans. Crazy fact, more Black people than White people think it should be restricted.
+
+https://www.pewresearch.org/fact-tank/2021/09/13/key-facts-about-americans-and-guns/
+https://www.statista.com/statistics/249775/percentage-of-population-in-the-us-owning-a-gun-by-party-affiliation/
+
+However, when we construct a model to explain Black and White disparity, we weren’t able to explain this variable.  Neither the demographic, the crime rate or the political view of a state have been able to explain the disparity. This also means some of these variables do not have a significant impact at all on the Black and White disparity like the crime rate or the democrat percentage. While some states fitted the hypothesis, others didn’t, making the political party a minor factor of disparity in Black and White killings.
+
+Even though we have not been able to explain the disparity between Black and White, we can still confirm that if you’re a Black male in the United States you are in more likely to get killed than a White person male or female. However, it is important to note that Black people do way more violent crime than white people. This could explain the disparity and, if we suppose all the police shooting happened during violent crime, prove us White have more chance to get shot than Black. Nevertheless, some bias exists and the police is more willing to shoot Black people who are fleeing or unarmed. In the end, democratic state definitely killed less people every year and might be a source of inspiration to lowered the killing rate. 
+
 
