--- a/Report/Eda1.Rmd
+++ b/Report/Eda1.Rmd
@@ -437,18 +437,38 @@ The graph shows globally that the killings dropped a little since 2018, a decrea
     
 ```{r, echo = FALSE, message = FALSE, warning=FALSE}
 
-black_state_killings %>% 
+#black_state_killings %>% 
+  #pivot_longer(c(`2013`, `2014`,`2015`,`2016`,`2017`,`2018`,`2019`,`2020`),
+                                      #names_to = "year",
+                                      #values_to = "count") %>%
+#filter(State%in% c("CA", "FL","TX")) %>%
+    #ggplot(aes(x = year, y = count, group = `State`, colour = `State`)) +
+    #geom_line() +
+    #geom_point()+
+  #labs(title = "Evolution of Black killings",          
+          #x = "Year",
+          #y= "Number of Black people killed")
+
+
+a <-black_state_killings %>% 
   pivot_longer(c(`2013`, `2014`,`2015`,`2016`,`2017`,`2018`,`2019`,`2020`),
                                       names_to = "year",
-                                      values_to = "count") %>%
+                                      values_to = "count")
+myPlot <- a %>%
 filter(State%in% c("CA", "FL","TX")) %>%
-    ggplot(aes(x = year, y = count, group = `State`, colour = `State`)) +
+  ggplot(aes(x = year, y = count, group = `State`, colour = `State`)) +
     geom_line() +
-    geom_point()+
-  labs(title = "Evolution of Black killings",          
+    geom_point() +
+  theme_ipsum() +
+    scale_color_viridis(discrete = TRUE) +
+    labs(title = "Evolution of Black killings",          
           x = "Year",
-          y= "Number of Black people killed")
-  
+          y= "Number of Black people killed") +
+    transition_reveal(as.numeric(year)) 
+
+
+animate(myPlot, duration = 8, fps = 20, width = 600, height = 600, renderer = gifski_renderer())
+#anim_save("output.gif")
 ```
 
      
